Cambia el texto de la pagina initial :tada:

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,18 +1,16 @@
 <div class="container-fluid">
-  <div class="address">
-    <h1>
-      <strong
-        >Pueden contactarnos via unos de los links en la esquina derecha</strong
-      >
-      <br />
-      <br />
-      <strong>
-        Direccion: Av. Cuauhtemoc 2437 Esq. Colombia Veracruz, Mexico
-      </strong>
-    </h1>
-  </div>
+    <div class="address">
+        <h1>
+            <strong>Contactandos en los links que estan en la parte superior derecha</strong>
+            <br />
+            <br />
+            <strong>
+                Direccion: Av. Cuauhtemoc 2437 Esq. Colombia Veracruz, Mexico
+            </strong>
+        </h1>
+    </div>
 
-  <div class="image-div">
-    <img src="../../../assets/logo.jpg" alt="" />
-  </div>
+    <div class="image-div">
+        <img src="../../../assets/logo.jpg" alt="" />
+    </div>
 </div>
